[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/win.gd" type="Script" id=1]
[ext_resource path="res://assets/texture/files/png/gui/plashka.png" type="Texture" id=2]
[ext_resource path="res://assets/texture/files/png/gui/you_win.png" type="Texture" id=3]
[ext_resource path="res://assets/texture/files/png/gui/page_active.png" type="Texture" id=4]
[ext_resource path="res://assets/texture/files/png/gui/Group_12.png" type="Texture" id=5]
[ext_resource path="res://assets/texture/files/png/gui/circle_red.png" type="Texture" id=6]
[ext_resource path="res://assets/texture/files/png/gui/x.png" type="Texture" id=7]
[ext_resource path="res://assets/texture/files/png/gui/r1.png" type="Texture" id=8]
[ext_resource path="res://assets/texture/files/png/gui/replay.png" type="Texture" id=9]
[ext_resource path="res://assets/texture/files/png/gui/g4.png" type="Texture" id=10]
[ext_resource path="res://assets/texture/files/png/gui/next.png" type="Texture" id=11]
[ext_resource path="res://assets/texture/files/png/gui/star_level_1.png" type="Texture" id=12]
[ext_resource path="res://assets/texture/files/png/gui/star_level_2.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]

resource/name = "hide"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 387.868, 588.631 ), Vector2( 364.988, 1744.08 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("star_1:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 226.742, 682.846 ), Vector2( 203.862, 1838.29 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("star_1:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("return_button:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 613.765, 213.079 ), Vector2( 590.885, 1368.53 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("return_button:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("home_button:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 62.2787, 226.033 ), Vector2( 39.3986, 1381.48 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("home_button:transform/rot")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("replay_button:transform/pos")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 143.665, 805.944 ), Vector2( 120.785, 1961.39 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("replay_button:transform/rot")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("next_button:transform/pos")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 414.338, 801.843 ), Vector2( 391.458, 1957.29 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("next_button:transform/rot")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("star_3:transform/pos")
tracks/12/interp = 1
tracks/12/imported = false
tracks/12/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 386.685, 512.65 ), Vector2( 363.805, 1668.1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("star_3:transform/rot")
tracks/13/interp = 1
tracks/13/imported = false
tracks/13/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite 2:transform/pos")
tracks/14/interp = 1
tracks/14/imported = false
tracks/14/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 397.927, 377.497 ), Vector2( 375.047, 1532.95 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite 2:transform/rot")
tracks/15/interp = 1
tracks/15/imported = false
tracks/15/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("star_2:transform/pos")
tracks/16/interp = 1
tracks/16/imported = false
tracks/16/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 571.235, 684.897 ), Vector2( 548.355, 1840.34 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("star_2:transform/rot")
tracks/17/interp = 1
tracks/17/imported = false
tracks/17/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 443.102, -500.213 ), Vector2( 387.868, 588.631 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("star_1:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 281.977, -405.998 ), Vector2( 226.742, 682.846 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("star_1:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("return_button:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 668.999, -875.765 ), Vector2( 613.765, 213.079 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("return_button:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("home_button:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 117.513, -862.811 ), Vector2( 62.2787, 226.033 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("home_button:transform/rot")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("replay_button:transform/pos")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 198.9, -282.9 ), Vector2( 143.665, 805.944 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("replay_button:transform/rot")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("next_button:transform/pos")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 469.573, -287.001 ), Vector2( 414.338, 801.843 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("next_button:transform/rot")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("star_3:transform/pos")
tracks/12/interp = 1
tracks/12/imported = false
tracks/12/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 441.92, -576.194 ), Vector2( 386.685, 512.65 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("star_3:transform/rot")
tracks/13/interp = 1
tracks/13/imported = false
tracks/13/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite 2:transform/pos")
tracks/14/interp = 1
tracks/14/imported = false
tracks/14/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 453.161, -711.347 ), Vector2( 397.927, 377.497 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite 2:transform/rot")
tracks/15/interp = 1
tracks/15/imported = false
tracks/15/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("star_2:transform/pos")
tracks/16/interp = 1
tracks/16/imported = false
tracks/16/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 626.47, -403.948 ), Vector2( 571.235, 684.897 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("star_2:transform/rot")
tracks/17/interp = 1
tracks/17/imported = false
tracks/17/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="win" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )
star_on = "res://assets/texture/files/png/gui/star_level_1.png"

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 1280.0
color = Color( 1, 1, 1, 0.437176 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 443.102, -500.213 )
transform/scale = Vector2( 0.5, 0.383769 )
texture = ExtResource( 2 )

[node name="Sprite 2" type="Sprite" parent="."]

transform/pos = Vector2( 453.161, -711.347 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="home_button" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 117.513, -862.811 )
transform/scale = Vector2( 1.85062, 1.91758 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="home_button"]

transform/pos = Vector2( 26.7969, 25.6384 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="return_button" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 668.999, -875.765 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="return_button"]

transform/pos = Vector2( 116.852, 101.58 )
transform/scale = Vector2( 1.46978, 1.37258 )
texture = ExtResource( 7 )

[node name="replay_button" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 198.9, -282.9 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="replay_button"]

transform/pos = Vector2( 181.333, 101.824 )
transform/scale = Vector2( 0.952836, 0.991771 )
texture = ExtResource( 9 )

[node name="next_button" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 469.573, -287.001 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="next_button"]

transform/pos = Vector2( 181.333, 101.824 )
transform/scale = Vector2( 0.952836, 0.991771 )
texture = ExtResource( 11 )

[node name="star_1" type="Sprite" parent="."]

transform/pos = Vector2( 281.977, -405.998 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="star_2" type="Sprite" parent="."]

transform/pos = Vector2( 626.47, -403.948 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="star_3" type="Sprite" parent="."]

transform/pos = Vector2( 441.92, -576.194 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "show"

[connection signal="pressed" from="home_button" to="." method="_on_home_button_pressed"]

[connection signal="pressed" from="return_button" to="." method="_on_return_button_pressed"]

[connection signal="pressed" from="replay_button" to="." method="_on_replay_button_pressed"]

[connection signal="pressed" from="next_button" to="." method="_on_next_button_pressed"]


